--- a/.gitignore
+++ b/.gitignore
@@ -7,20 +7,17 @@
 # Ignore bundler config.
 /.bundle
 
+bin/*
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
-!/log/.keep
-!/tmp/.keep
-
-# Ignore pidfiles, but keep the directory.
-/tmp/pids/*
-!/tmp/pids/
-!/tmp/pids/.keep
+log/*
 
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
+storage/*
 
 /public/assets
 .byebug_history
@@ -34,5 +31,7 @@
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+vendor/**/*
 
 .idea
