--- a/package.json
+++ b/package.json
@@ -2,13 +2,11 @@
   "name": "bbq",
   "private": true,
   "dependencies": {
-    "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^5.2.1",
+    "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "webpack": "^4.0.0"
+    "popper.js": "^1.16.1"
   },
   "version": "0.1.0",
   "devDependencies": {
