--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "bbq",
+  "description": "training project",
+  "author": "Rob Bikmansurov <robb@mail.ru>",
+  "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "NODE_ENV=development webpack-dev-server --mode development --open --host 0.0.0.0"
+  },
   "dependencies": {
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
