add password for users fixtures

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,3 +10,8 @@ vadim:
 
 ivan:
   <<: *DEFAULTS
+
+rob:
+  <<: *DEFAULTS
+  # confirmed_at: <%= Time.zone.now %>
+  encrypted_password: <%= Devise::Encryptor.digest(User, '123456') %>
