--- a/config/credentials.yml
+++ b/config/credentials.yml
@@ -12,5 +12,7 @@ test:
     password: password
     user_name: test
 
+yandex_api_key:
+
 # Used as the base secret for all MessageVerifiers in Rails, including the one protecting cookies.
 secret_key_base:
