--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rails/webpacker": "4.3.0",
     "air-datepicker": "^2.2.3",
     "bootstrap": "^4.5.2",
+    "ekko-lightbox": "^5.3.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   },
