migration in github actions

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -33,5 +33,5 @@ jobs:
       run: cp config/database.yml.example config/database.yml
     - name: Run tests
       run: |
-        bundle exec rails db:prepare
+        bundle exec rails db:migrate
         bundle exec rails rspec
