set RAILS_ENV for github action, move aws settings to the credentials

--- a/config/credentials.yml
+++ b/config/credentials.yml
@@ -1,7 +1,3 @@
-# aws:
-#   access_key_id: 123
-#   secret_access_key: 345
-
 development:
   mail:
     password: 
@@ -11,6 +7,12 @@ test:
   mail:
     password: password
     user_name: test
+
+aws:
+  S3_REGION: eu-north-1
+  S3_ACCESS_KEY: 
+  S3_SECRET_KEY: 
+  S3_BUCKET_NAME: bbq-robb
 
 yandex_api_key:
 
