--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -33,5 +33,5 @@ jobs:
       run: cp config/database.yml.example config/database.yml
     - name: Run tests
       run: |
-        bundle exec rails db:migrate
-        bundle exec rails rspec
+        RAILS_ENV=test bundle exec rails db:migrate
+        RAILS_ENV=test bundle exec rails rspec
