--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -34,4 +34,4 @@ jobs:
     - name: Run tests
       run: |
         RAILS_ENV=test bundle exec rails db:migrate
-        RAILS_ENV=test bundle exec rails rspec
+        RAILS_ENV=test bundle exec rspec
