--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -94,3 +94,9 @@ production:
 
   # Cache manifest.json for performance
   cache_manifest: true
+
+production:
+  <<: *default
+  compile: false
+  extract_css: true
+  cache_manifest: true
