fix staging config

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -95,7 +95,7 @@ production:
   # Cache manifest.json for performance
   cache_manifest: true
 
-production:
+staging:
   <<: *default
   compile: false
   extract_css: true
