add omniauth and facebook authentication

--- a/config/credentials.yml
+++ b/config/credentials.yml
@@ -1,7 +1,11 @@
 development:
   mail:
     password: 
-    user_name: 
+    user_name:
+  # Rails.application.credentials.dig(Rails.env.to_sym, :omniauth, :facebook_id)
+  omniauth:
+    facebook_id:
+    facebook_secret:
 
 test:
   mail:
